--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin recipes</h1>
             <ul>
-                <li>Recipe 1</li>
-                <li>Recipe 2</li>
-                <li>Recipe 3</li>
+                <li><a href ="recipes/recipe1.html">Recipe 1</a></li>
+                <li><a href ="recipes/recipe2.html">Recipe 2</a></li>
+                <li><a href ="recipes/recipe3.html">Recipe 3</a></li>
             </ul>
     </body>
 </html>
