--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -7,10 +7,21 @@
 
     <body>
         <h1>Recipe 3</h1>
-            <ul>
-                <li>Description</li>
-                <li>Ingredients</li>
-                <li>Instructions</li>
-            </ul>
+            <img src="..." alt=".....">
+            <h2>Description</h2>
+                <p>......</p>
+                <p>......</p>
+            <h2>Ingredients</h2>
+                <ul>
+                    <li>...</li>
+                    <li>...</li>
+                    <li>...</li>
+                </ul>
+            <h2>Steps</h2>
+                <ol>
+                    <li>...</li>
+                    <li>...</li>
+                    <li>...</li>
+                </ol>
     </body>
 </html>
