Edit recipe 1 and 2

--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Recipe 2</h1>
-            <img src="..." alt=".....">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F-0001%2F11%2F30%2F75035.jpg&h=480&q=85" alt="Best chicken recipes">
             <h2>Description</h2>
                 <p>......</p>
                 <p>......</p>
