--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Odin recipes</h1>
             <ul>
-                <li><a href ="recipes/recipe1.html">Recipe 1</a></li>
+                <li><a href ="recipes/recipe1.html">Greek chichen skewers</a></li>
                 <li><a href ="recipes/recipe2.html">Recipe 2</a></li>
                 <li><a href ="recipes/recipe3.html">Recipe 3</a></li>
             </ul>
