--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1><em>Odin recipes</em></h1>
             <ul>
-                <li><a href ="recipes/recipe1.html">Greek chichen skewers</a></li>
-                <li><a href ="recipes/recipe2.html">...</a></li>
-                <li><a href ="recipes/recipe3.html">...</a></li>
+                <li><a href ="recipes/chicken-skewers.html">Greek chichen skewers</a></li>
+                <li><a href ="recipes/shrimp-spaghetti.html">Shrimp spaghetti with tomato sauce</a></li>
+                <li><a href ="recipes/french-toast.html">Ultimate french toast</a></li>
             </ul>
     </body>
 </html>
