--- a/recipes/chicken-skewers.html
+++ b/recipes/chicken-skewers.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Recipe 1</title>
+        <title>Greek chicken skewers</title>
     </head>
 
     <body>
