--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Recipe 2</title>
+        <title>Ultimate french toast</title>
     </head>
 
     <body>
-        <h1>Recipe 2</h1>
-            <img src="..." alt="...">
+        <h1>Ultimate french toast</h1>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3314610.jpg" alt="French toast plate">
         <h2>Description</h2>
             <p>...</p>
             <p>...</p>
@@ -33,4 +33,4 @@
                     <p>...</p>
             </ol>
     </body>
-</html>     
+</html>
