--- a/recipes/shrimp-spaghetti.html
+++ b/recipes/shrimp-spaghetti.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Recipe 3</title>
+        <title>Shrimp spaghetti with tomato sauce</title>
     </head>
 
     <body>
-        <h1>Recipe 3</h1>
-            <img src="..." alt="...">
+        <h1>Shrimp spaghetti with tomato sauce</h1>
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7006861.jpg" alt="Shrimp spaghetti plate">
         <h2>Description</h2>
             <p>...</p>
             <p>...</p>
@@ -33,4 +33,4 @@
                     <p>...</p>
             </ol>
     </body>
-</html>
+</html>     
