Add pictures to all files

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Ultimate french toast</h1>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3314610.jpg" alt="French toast plate">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3314610.jpg" width="500px" alt="French toast plate">
         <h2>Description</h2>
             <p>...</p>
             <p>...</p>
