--- a/recipes/shrimp-spaghetti.html
+++ b/recipes/shrimp-spaghetti.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Shrimp spaghetti with tomato sauce</h1>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7006861.jpg" alt="Shrimp spaghetti plate">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7006861.jpg" width="800px" alt="Shrimp spaghetti plate">
         <h2>Description</h2>
             <p>...</p>
             <p>...</p>
