--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1><em>Odin recipes</em></h1>
-            <ul>
+        <img src="https://i.gifer.com/NVq9.gif" width="800px" alt="A very noisy eater">
+        <p> </p>
+            <ul><strong><em>Click below to discover a new world of taste!</em></strong> 
+                <p> </p>
                 <li><a href ="recipes/chicken-skewers.html">Greek chichen skewers</a></li>
                 <li><a href ="recipes/shrimp-spaghetti.html">Shrimp spaghetti with tomato sauce</a></li>
                 <li><a href ="recipes/french-toast.html">Ultimate french toast</a></li>
