--- a/recipes/chicken-skewers.html
+++ b/recipes/chicken-skewers.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Greek chichen skewers</h1>
-            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6705859.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="A nice looking picture of a greek chicken skewers plate">
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6705859.jpg&w=596&h=596&c=sc&poi=face&q=85" width="500px" alt="A nice looking picture of a greek chicken skewers plate">
         <h2>Description</h2>
             <p>Greek-inspired chicken skewers with lots of flavor!</p>
             <p>Marinade is also wonderful on grilled vegetables.</p>
